--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@ m:root {
 }
 
 body {
-  background-color: black;
+  background-color: rgb(251, 246, 246);
   font-family: Chaucer;
 
   display: flex;
@@ -15,7 +15,7 @@ body {
 
 .textCont {
   font-size: 150%;
-  font-color: white;
+  font-color: black;
   margin-top: 10%;
   margin-left: 5px;
   margin-right: 5px;
